# devtask-manager

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: architecture.md  usage.md
src/: __init__.py  ageing.py  archive.py  assignments.py  backup.py  batch.py  blockers.py  board.py  burndown.py  cli.py  config.py  context.py  date_utils.py  dedupe.py  dependencies.py  due_dates.py  effort.py  estimation.py  exceptions.py  exporter.py  filter_cli.py  formatter.py  history.py  importer.py  kanban.py  labels.py  metrics.py  migrate.py  milestones.py  models.py  notes.py  notify.py  permissions.py  priority_queue.py  recurring.py  release.py  reports.py  retro.py  review.py  search.py  (+13 more)
tests/: test_ageing.py  test_archive.py  test_assignments.py  test_backup.py  test_batch.py  test_blockers.py  test_board.py  test_burndown.py  test_config.py  test_date_utils.py  test_dedupe.py  test_dependencies.py  test_due_dates.py  test_effort.py  test_estimation.py  test_exporter.py  test_filter_cli.py  test_formatter.py  test_history.py  test_importer.py  test_kanban.py  test_labels.py  test_migrate.py  test_milestones.py  test_models.py  test_notify.py  test_priority_queue.py  test_recurring.py  test_reports.py  test_retro.py  test_review.py  test_search.py  test_snapshot.py  test_sorting.py  test_sprint.py  test_stats.py  test_storage.py  test_subtasks.py  test_tags.py  test_templates.py  (+3 more)
